# IIA-tp2

./: CMakeLists.txt  README.md  Resultados1.xlsx  Resultados2.xlsx  main.c  main.h
MetodoEvolutivo/: common.c  main.c  main.h  metodoEvolutivo.c  metodoEvolutivo.h
MetodoHibrido/: common.h  main.c  metodoHibrido.c  metodoHibrido.h
Test Files/__MACOSX/: ._Test Files
Test Files/__MACOSX/Test Files/: ._file1.txt  ._file2.txt  ._file3.txt  ._file4.txt  ._file5.txt  ._teste.txt
TrepaColinas/: algoritmo.c  algoritmo.h  common.c  common.h  funcao.c  funcao.h  main.c  utils.c  utils.h
